// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsGraph Renders a points graph with a difference of > MAX with p1 winning 1`] = `
<div
  className="points-graph"
>
  <h1
    className="points-graph__title"
  >
    Chore Wars
  </h1>
  <div
    className="points-graph__people"
  >
    <div
      className="points-graph__person points-graph__person--1"
      key="player1"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player1.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 1
      </div>
    </div>
    <div
      className="points-graph__person points-graph__person--2"
      key="player2"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player2.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 2
      </div>
    </div>
  </div>
  <div
    className="points-graph__graph"
  >
    <div
      className="points-graph__bar points-graph__bar--1"
      key="player1"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="points-graph__difference points-graph__difference--1"
      >
        600
      </div>
    </div>
    <div
      className="points-graph__bar points-graph__bar--2"
      key="player2"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;

exports[`PointsGraph Renders a points graph with a difference of > MAX with p2 winning 1`] = `
<div
  className="points-graph"
>
  <h1
    className="points-graph__title"
  >
    Chore Wars
  </h1>
  <div
    className="points-graph__people"
  >
    <div
      className="points-graph__person points-graph__person--1"
      key="player1"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player1.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 1
      </div>
    </div>
    <div
      className="points-graph__person points-graph__person--2"
      key="player2"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player2.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 2
      </div>
    </div>
  </div>
  <div
    className="points-graph__graph"
  >
    <div
      className="points-graph__bar points-graph__bar--1"
      key="player1"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="points-graph__bar points-graph__bar--2"
      key="player2"
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <div
        className="points-graph__difference points-graph__difference--2"
      >
        600
      </div>
    </div>
  </div>
</div>
`;

exports[`PointsGraph Renders a points graph with player 1 winning 1`] = `
<div
  className="points-graph"
>
  <h1
    className="points-graph__title"
  >
    Chore Wars
  </h1>
  <div
    className="points-graph__people"
  >
    <div
      className="points-graph__person points-graph__person--1"
      key="player1"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player1.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 1
      </div>
    </div>
    <div
      className="points-graph__person points-graph__person--2"
      key="player2"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player2.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 2
      </div>
    </div>
  </div>
  <div
    className="points-graph__graph"
  >
    <div
      className="points-graph__bar points-graph__bar--1"
      key="player1"
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <div
        className="points-graph__difference points-graph__difference--1"
      >
        100
      </div>
    </div>
    <div
      className="points-graph__bar points-graph__bar--2"
      key="player2"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;

exports[`PointsGraph Renders a points graph with player 2 winning 1`] = `
<div
  className="points-graph"
>
  <h1
    className="points-graph__title"
  >
    Chore Wars
  </h1>
  <div
    className="points-graph__people"
  >
    <div
      className="points-graph__person points-graph__person--1"
      key="player1"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player1.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 1
      </div>
    </div>
    <div
      className="points-graph__person points-graph__person--2"
      key="player2"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player2.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 2
      </div>
    </div>
  </div>
  <div
    className="points-graph__graph"
  >
    <div
      className="points-graph__bar points-graph__bar--1"
      key="player1"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="points-graph__bar points-graph__bar--2"
      key="player2"
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <div
        className="points-graph__difference points-graph__difference--2"
      >
        100
      </div>
    </div>
  </div>
</div>
`;

exports[`PointsGraph Renders an equal points graph 1`] = `
<div
  className="points-graph"
>
  <h1
    className="points-graph__title"
  >
    Chore Wars
  </h1>
  <div
    className="points-graph__people"
  >
    <div
      className="points-graph__person points-graph__person--1"
      key="player1"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player1.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 1
      </div>
    </div>
    <div
      className="points-graph__person points-graph__person--2"
      key="player2"
    >
      <img
        alt=""
        className="points-graph__person-picture"
        src="/images/avatars/player2.svg"
      />
      <div
        className="points-graph__person-name"
      >
        Player 2
      </div>
    </div>
  </div>
  <div
    className="points-graph__graph"
  >
    <div
      className="points-graph__bar points-graph__bar--1"
      key="player1"
      style={
        Object {
          "width": "0%",
        }
      }
    />
    <div
      className="points-graph__bar points-graph__bar--2"
      key="player2"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;
